Changes in navbar seperate Integration & Mailbox

--- a/docs/mailbox.mdx
+++ b/docs/mailbox.mdx
@@ -54,12 +54,9 @@ This guide explains how the Mailbox (Inbox) works, how to send or forward emails
 
 ## Plans, Limits, and Processing Modes
 
-Choose a plan that fits your workload and upgrade anytime if you need higher limits. 
+Choose a plan that fits your workload and upgrade anytime if you need higher limits.
 
-
-:::info Important Notes
-Please read the following important information carefully.  
-:::
+>Please read the following important information carefully.
 
 - ⚠️ If the total mail size is more than **20 MB**, the upload will **fail**.  
 - ✅ If a mail upload fails, **your credits will be automatically restored**.  
