--- a/docs/settings/notification.mdx
+++ b/docs/settings/notification.mdx
@@ -52,5 +52,9 @@ At BankStmtConverter, configuring notifications helps you stay informed about im
 
 >Follow the screenshot above for a visual guide.  
 
-1. 
-![webhook](/images/notification.png)
+1. **When The toggle is turned off** You will receive an email every time your file has been completed.
+![notify](/images/notify.png)
+
+
+2. **When the toggle is turned on** You will receive an email notification only when the number of uploaded pages is equal to or greater than the limit you set (for example, 3 pages).
+![notifyon](/images/notifyon.png)
