Change plans content in mdx files

--- a/docs/file-upload.mdx
+++ b/docs/file-upload.mdx
@@ -10,18 +10,20 @@ This page explains how to upload files.
 - Maximum file size depends on your plan (up to **20 MB**)  
 - You can upload multiple files depending on your plan.  
 - If you upload the wrong file, use the **Cancel Upload** button before the **upload reaches 100%**.  
-- If a file upload fails, your credits will be **restored**.  
+- If a file upload fails, your credits will be **restored**.
+- Once the file is **completed**, you will receive an email notifying you that your file is **ready to download**.
+- After your file is complete, you can download it in your desired formats such as **Excel or CSV**.
 - **Starter**: Files are processed in a queue (one by one).  
 - **Pro**: Files are processed in parallel.  
 - **Bussiness**: Files are processed in parallel.  
 
 ### Plan Details
 
-| Plan       | File Size Limit | Processing Mode | File Types         | Data Retention |
-| ---------- | --------------: | --------------- | ------------------ | -------------- |
-| Starter    | Max 5 MB        | Queue           | PDF, JPG, PNG, BMP | 30 days        |
-| Pro        | Max 20 MB       | Parallel        | PDF, JPG, PNG, BMP | 90 days        |
-| Bussiness  | Max 9.8 MB      | Parallel        | PDF, JPG, PNG, BMP | 120 days       |
+| Plan       | File Size Limit | Processing Mode |   Maximum Document Attachments           | File Types        | Data Retention |
+| ---------- | --------------: | --------------- | -----------------------------------------|------------------ | -------------- |
+| Starter    | Max 5 MB        | Queue           |   Multiple document processing Max 5     |PDF, JPG, PNG, BMP | 30 days        |
+| Pro        | Max 10 MB       | Parallel        |   Multiple document processing Max 10    |PDF, JPG, PNG, BMP | 90 days        |
+| Bussiness  | Max 20 MB       | Parallel        |   Multiple document processing Max 20    |PDF, JPG, PNG, BMP | 365 days       |
 
 
 ## Reference
