--- a/docs/integration/google-sheets.mdx
+++ b/docs/integration/google-sheets.mdx
@@ -33,7 +33,7 @@ Once the inbox and auto-forwarding rules are set, you can pull your parsed data 
 
 1. **Copy the Formula** (Example)
    ```text
-   =url('https://bankstmtconverter.com')
+   send a file name to generate an formula
 2. **Create or Open a Google Sheet**
 
 - Go to [Google Sheets](https://sheets.google.com).  
