--- a/docs/integration/webhooks.mdx
+++ b/docs/integration/webhooks.mdx
@@ -148,7 +148,7 @@ Verifying this signature ensures that the request is genuine and truly sent from
 |---------------|------------------------------------|-------------------------------------------------------------------------------------------|
 | `event`       | `"document.extracted"`             | The core action: The document has been successfully processed and its content/metadata is now available. This triggers your system to act. |
 | `document_id` | `"01k6mabs1npmhaedy6yf1c9hmc"`     | A unique identifier for this specific document. Use this ID to fetch the extracted data (text, tables, etc.). |
-| `name`        | `"Pixalto-Pricing (1).pdf"`        | The original filename of the document.                                                     |
+| `name`        | `"Bankstmtconverter-Pricing.pdf"`  | The original filename of the document.                                                     |
 | `size`        | `15025`                            | The size of the document in bytes.                                                         |
 | `pages`       | `1`                                | The number of pages in the document.                                                       |
 | `download_url`| `(A URL)`                          | A temporary link to download the original document or possibly the extracted data (e.g., CSV/JSON file). |
