--- a/docs/statement.mdx
+++ b/docs/statement.mdx
@@ -13,9 +13,9 @@ You can also download documents in different formats for your records.
 
 ## Documents List
 
-| Document ID                        | Name                       | Pages | Status     |
-|------------------------------------|----------------------------|-------|------------|
-| Your Document ID                   | Document.pdf               | 1     | Completed  |
+| Document ID                        | Doc Name                   | DocPages | Status     |
+|------------------------------------|----------------------------|----------|------------|
+| Your Document ID                   | Document.pdf               | 1        | Completed  |
 
 ---
 
