--- a/docs/contact.mdx
+++ b/docs/contact.mdx
@@ -12,7 +12,7 @@ We’re here to help you get the most out of BankStmtConverter and build a thriv
 Connect with other users, share your experiences, and get help from fellow BankStmtConverter users:  
 - [Reddit Community](https://www.reddit.com/r/BankStmtConverter)  
 - [Join our Discord Server](https://discord.gg/bankstmtconverter)  
-- [GitHub Repository](https://github.com/BankStmtConverter)
+- [GitHub Repository](https://github.com/tzktok/fastapi/tree/main/docs)
 
 ### ✅ Contact Support
 
