Check the Capitalization on pages & Fix the Grammar issues

--- a/api-reference/bankstmtconverter.mdx
+++ b/api-reference/bankstmtconverter.mdx
@@ -1,5 +1,5 @@
 ---
-title: What is bankstmtconverter
+title: What Is BankStmtConverter
 description: Get an overview of BankStmtConverter — a powerful tool to convert bank statements into editable formats quickly and accurately.
 ---
 
@@ -38,6 +38,6 @@ Managing bank statements manually can be time-consuming and error-prone. Our **A
 
 To get started, simply **upload your bank statement** and select the desired output format.
 
-For more advanced usage, explore our detailed **guides on features and API integrations**.
+For more advanced usage, explore our detailed **guides on features and API Integrations**.
 
 🎉 **Happy converting!**
