--- a/get-started/dashboard-overview.mdx
+++ b/get-started/dashboard-overview.mdx
@@ -28,7 +28,7 @@ The **Dashboard** is your central hub for managing your bank statements, account
   
 
 ### ⚙️ Settings
-- Customize your account preferences and dashboard settings.  
+- Customize your account preferences and Dashboard settings.
 - Enable or disable features and notifications.
 
 ### 👤 My Account
@@ -51,18 +51,18 @@ The **Dashboard** is your central hub for managing your bank statements, account
 - Manage account security settings such as 2FA.  
 - Monitor login activity and authorized devices.
 
-### 🗝 API Key
+### 🗝 API Keys
 - Generate and manage your API keys for programmatic access.  
-- Integrate Bank Statement Converter into your own applications.
+- Integrate BankStmtConverter into your own applications.
 
-### 🛣 RoadMap
+### 🛣 Roadmap
 - View upcoming features and product improvements.  
 - Stay informed about planned updates.
 
 ### 📚 Guide
-- Access tutorials and documentation to get the most out of Bank Statement Converter.  
+- Access tutorials and documentation to get the most out of BankStmtConverter.
 - Learn how to upload, convert, and manage your statements efficiently.
 
 ---
 
-> The dashboard is designed to provide a **centralized, easy-to-use interface** for all your financial document processing needs.
+> The Dashboard is designed to provide a **centralized, easy-to-use interface** for all your financial document processing needs.
