--- a/how-it-works/ai-model-works.mdx
+++ b/how-it-works/ai-model-works.mdx
@@ -5,7 +5,7 @@ title: How Our AI Model Works
 
 # 🤖 How Our AI Model Works
 
-Bank Statement Converter leverages **advanced AI and machine learning** to efficiently extract and convert financial data from bank statements into structured formats like **Excel, CSV, or Google Sheets**. Our AI model combines OCR processing, intelligent table detection, and contextual understanding to deliver accurate and scalable results.
+BankStmtConverter leverages **advanced AI and machine learning** to efficiently extract and convert financial data from bank statements into structured formats like **Excel, CSV, or Google Sheets**. Our AI model combines OCR processing, intelligent table detection, and contextual understanding to deliver accurate and scalable results.
 
 ---
 
@@ -29,4 +29,4 @@ Bank Statement Converter leverages **advanced AI and machine learning** to effic
 
 ---
 
-> For more information or to start using our tool, visit [Bank Statement Converter](https://bankstmtconverter.com).
+> For more information or to start using our tool, visit [BankStmtConverter](https://bankstmtconverter.com).
