--- a/how-it-works/conversion-process.mdx
+++ b/how-it-works/conversion-process.mdx
@@ -3,10 +3,10 @@ id: conversion-process
 title: Step-by-Step Conversion Process
 ---
 
-Converting your bank statements into structured data with **Bank Statement Converter** is simple and fast. Follow these steps:
+Converting your bank statements into structured data with **BankStmtConverter** is simple and fast. Follow these steps:
 
-1. **Login to Bank Statement Converter** 
-      [Login](https://bankstmtconverter.com/login). 
+1. **Log in to BankStmtConverter**
+      [Log in](https://bankstmtconverter.com/login).
 
 2. **Upload Your Document**  
    Drag and drop your bank statement in **.pdf, .bmp, .jpeg, .x-png, or .png** format onto the upload area.  
