--- a/how-it-works/ocr-processing.mdx
+++ b/how-it-works/ocr-processing.mdx
@@ -7,7 +7,7 @@ title: Understanding OCR Processing
 
 **Optical Character Recognition (OCR)** is a technology that converts scanned documents and images into editable and searchable data.  
 
-In **Bank Statement Converter**, OCR works together with AI to extract bank statement data efficiently:
+In **BankStmtConverter**, OCR works together with AI to extract bank statement data efficiently:
 
 - **Text Recognition**  
   OCR identifies and extracts text from PDFs and scanned images.  
