--- a/how-to-use/upload-first-document.mdx
+++ b/how-to-use/upload-first-document.mdx
@@ -11,11 +11,11 @@ Use the **demo upload** option to try the app as a guest user. It's fast, safe, 
 
 Uploading your first document is simple and fast. Follow these steps:
 
-1. [Login](https://bankstmtconverter.com/login) to your **Bank Statement Converter** account.  
-2. Go to the **Home**.  
+1. [Log in](https://bankstmtconverter.com/login) to your **BankStmtConverter** account.
+2. Go to the **home**.
 3. Click the **Select Files** button. 
 4. Select your bank statement **file from your device**.
-5. Go to **Statements** and download your bank statement in your preferred **output formats**  
+5. Go to **Statements** and download your bank statement in your preferred **Output Formats**
  
 
 **Tips:**  
@@ -35,5 +35,5 @@ Uploading your first document is simple and fast. Follow these steps:
 2. Click the **Select Files** button and choose your bank statement **file from your device**.
 ![click select file button. Select file from your drive](/images/upload-file.png)
 
-3. Go to **Statements** and download your bank statement in your preferred **output formats**.
+3. Go to **Statements** and download your bank statement in your preferred **Output Formats**.
 ![download your desired output formats](/images/statement.png)
