--- a/integration/google-sheets.mdx
+++ b/integration/google-sheets.mdx
@@ -6,7 +6,7 @@ title: Google Sheets
 ## 📊 Exporting Data to Google Sheets
 
 The information you receive from order confirmations, booking emails, or website forms often needs to be organized into financial statements or reports.  
-Instead of doing this manually, **BankStatementConverter** lets you **automatically export your parsed data to Google Sheets**, making it faster and easier to keep your records up to date.
+Instead of doing this manually, **BankStmtConverter** lets you **automatically export your parsed data to Google Sheets**, making it faster and easier to keep your records up to date.
 
 ---
 
@@ -33,14 +33,14 @@ Once the inbox and auto-forwarding rules are set, you can pull your parsed data 
 
 1. **Copy the Formula** (Example)
    ```text
-   select a file name to generate an formula
+   select a file name to generate a formula
 2. **Create or Open a Google Sheet**
 
 - Go to [Google Sheets](https://sheets.google.com).  
 
 - Open an existing spreadsheet or create a new one.
 
-3. **Paste the Formula in Any Cell**
+3. **Paste the Formula into Any Cell**
 
 - Select a cell and paste the copied formula.
 
@@ -64,7 +64,7 @@ Once the inbox and auto-forwarding rules are set, you can pull your parsed data 
 
    ![search](/images/docsearch.png)
 
-3. **Generate the Document Formula** & **Copy your clipboard**
+3. **Generate the Document Formula** & **Copy to Clipboard**
 
    A unique formula for the selected document will be automatically generated. Copy the generated formula to your clipboard.
 
