--- a/release-notes/latest-update.mdx
+++ b/release-notes/latest-update.mdx
@@ -18,7 +18,7 @@ Stay updated with the latest features, improvements, and bug fixes for Bank Stat
 - Users can **enable or disable notifications** for all conversions via a toggle switch.  
 - Added an **input field for specifying the number of pages** to trigger a notification.  
 - Enhanced **user interface** with clear labels and placeholders.  
-- Notifications settings include **validation** to ensure correct input values.  
+- Notification settings include **validation** to ensure correct input values.
 
 **Design Updates:**  
 - Simplified layout for better readability and usability.  
@@ -37,12 +37,12 @@ Stay updated with the latest features, improvements, and bug fixes for Bank Stat
 
 ---
 
-## 🆕 Aug 2024 – Login with Gmail
+## 🆕 Aug 2024 – Log in with Gmail
 
 **Type:** New Feature  
 
 **Details:**  
-- Launch of **Login with Gmail**, allowing users to quickly and securely access their accounts using Gmail credentials.  
+- Launch of **Log in with Gmail**, allowing users to quickly and securely access their accounts using Gmail credentials.
 
 **Key Benefits:**  
 - Faster login: No need to remember another username and password  
@@ -50,12 +50,12 @@ Stay updated with the latest features, improvements, and bug fixes for Bank Stat
 - Seamless integration: Works across desktop and mobile devices  
 
 **How to Use:**  
-1. Click the **"Login with Gmail"** button on the sign-in page  
+1. Click the **"Log in with Gmail"** button on the sign-in page
 2. Select your Google account  
 3. Grant permission to the app  
 4. You’re in!  
 
-> Existing users can link their Gmail accounts in account settings. New users can create an account instantly using Gmail credentials.
+> Existing users can link their Gmail accounts in account settings; new users can create an account instantly using Gmail credentials.
 
 ---
 
@@ -70,7 +70,7 @@ Stay updated with the latest features, improvements, and bug fixes for Bank Stat
 
 ---
 
-## 🆕 Jun 2024 – Now Processing PDF on GPU System 🥳
+## 🆕 Jun 2024 – Now Processing PDFs on GPU System 🥳
 
 **Type:** Improvement  
 
