--- a/settings/billing-invoices.mdx
+++ b/settings/billing-invoices.mdx
@@ -3,8 +3,7 @@ id: billing-invoice
 title: Billing & Invoice
 ---
 
-Learn about how BankStmtConverter handles billing, invoicing, and payment management for premium features.
-
+Learn how Bank Statement Converter handles billing, invoicing, and payment management for premium features.
 ---
 
 ### ✅ Billing Overview
@@ -19,7 +18,7 @@ BankStmtConverter offers a simple and transparent billing system for premium fea
 
 ### ✅ How Billing Works
 
-1. Select a Premium Plan from your account dashboard.  
+1. Select a Premium plan from your account dashboard.
 2. Enter your billing details (company name, address, tax ID if applicable).  
 3. Choose your preferred payment method (Credit Card, PayPal, etc.).  
 4. Invoices are automatically generated after each payment.
@@ -36,16 +35,16 @@ Each invoice includes:
 - Tax Information (if applicable)  
 - Your Billing Information  
 
-📥 Invoices are available for download in PDF format directly from your account dashboard under the **Billing** section.
+📥 invoices are available for download in PDF format directly from your account dashboard under the **Billing** section.
 
 ---
 
 ### ✅ Payment Methods
 
 We support multiple payment methods for your convenience:  
-- 💳 Credit / Debit Card  
+- 💳 Credit/Debit Card
 - 🅿️ PayPal  
-- Bank Transfer (for corporate accounts)  
+- Bank Transfer (for Corporate Accounts)
 
 ---
 
@@ -65,5 +64,5 @@ We support multiple payment methods for your convenience:
 >Follow the screenshot above for a visual guide.  
 
 
-1. Add your billing address to your **invoices and download your bills**
+1. Add your **billing address** to your invoices and download them from your account
 ![billing](/images/Billing.png)
