--- a/settings/security.mdx
+++ b/settings/security.mdx
@@ -29,8 +29,8 @@ This helps keep your account safe and secure.
 ## Actions
 
 - **Save Changes**  
-  Click this **button** after filling in all fields to you get the notification on **password updated successfully**.  
-  Then, you will be logged out automatically and taken to the **login page**. Enter your **new password to login** again.
+  Click this **button** after filling in all fields to you get the notification on **Password Updated Successfully**.
+  Then, you will be logged out automatically and taken to the **Login Page**. Enter your **new password to login** again.
 
 ---
 
@@ -42,7 +42,7 @@ This helps keep your account safe and secure.
 >Follow the screenshots and video for a step-by-step guide.
 
 
-1. Open and upgrade your Password
+1. Open and upgrade Your Password
 
 ![UpdatePassword](/images/updatepassword.png)
 
