--- a/what-is-bankstmtconverter.mdx
+++ b/what-is-bankstmtconverter.mdx
@@ -1,5 +1,5 @@
 ---
-title: "what is bankstmtconverter"
+title: "What Is Bankstmtconverter"
 description: "This section serves as an introduction to the BankStmtConverter documentation."
 ---
 
