--- a/get-started/create-an-account.mdx
+++ b/get-started/create-an-account.mdx
@@ -5,13 +5,13 @@ title: How to Create an Account
 
 # 📝 How to Create an Account
 
-Creating an account on **Bank Statement Converter** is quick and easy. Follow these steps to get started:
+Creating an account on **BankStmtConverter** is quick and easy. Follow these steps to get started:
 
-1. Visit the [SignUp](https://bankstmtconverter.com/register).
+1. Visit the [Sign Up](https://bankstmtconverter.com/register).
 2. Login with Google [Google](https://bankstmtconverter.com/register).  
 2. Enter your **Full name**, **Email address**, and **Password**.  
 3. Agree to the [Terms of Service](https://bankstmtconverter.com/terms) and [Privacy Policy](https://bankstmtconverter.com/privacy-policy).  
-4. Verify your email by clicking the **verification link** sent to your Mail inbox.  
+4. Verify your email by clicking the **Verification Link** sent to your Mail inbox.
 
 > Once verified, you can log in and start converting your bank statements immediately.
 
