--- a/settings/notification.mdx
+++ b/settings/notification.mdx
@@ -11,16 +11,16 @@ At BankStmtConverter, configuring notifications helps you stay informed about im
 
 1. Open **Dashboard → Settings → Notifications**.  
 2. In **Email Notification Settings**, you’ll see:  
-   - **Notify all Conversion** (toggle).  
-   - **Notify when pages exceeded** (number field with + / – controls).  
-3. Adjust the settings as needed (see behavior explained below).  
+   - **Notify All Conversion** (toggle).
+   - **Notify When Pages Exceeded** (number field with + / – controls).
+3. Adjust the settings as needed (see explanation below).
 4. Click **Save Changes**.
 
 ---
 
 ## ✅ What Each Option Does
 
-- **Notify all Conversion (toggle ON)**  
+- **Notify all Conversion (toggle switch on)**
   - Sends an email for **every conversion**.  
   - When ON, the **pages exceeded** setting is ignored.
 
@@ -33,12 +33,12 @@ At BankStmtConverter, configuring notifications helps you stay informed about im
 
 ## ✅ Step-by-Step Procedure
 
-- **Get notified for every conversion**  
+- **Get Notified for Every Conversion**
   - Turn **Notify all Conversion → ON**.  
   - Ignore the page number setting.  
   - **Result:** Every processed file triggers an email.
 
-- **Get notified only for large files**  
+- **Get Notified Only for Large Files.**
   - Turn **Notify all Conversion → OFF**.  
   - Set **Notify when pages exceeded → 4**.  
   - Upload a 3-page file → **no email**.  
@@ -50,9 +50,9 @@ At BankStmtConverter, configuring notifications helps you stay informed about im
 
 >Follow the screenshot above for a visual guide.  
 
-1. **When The toggle is turned off** You will receive an email every time your file has been completed.
+1. **When the toggle is turned off** You will receive an email every time your file is processed.
 ![notify](/images/notify.png)
 
 
-2. **When the toggle is turned on** You will receive an email notification only when the number of uploaded pages is equal to or greater than the limit you set (for example, 3 pages).
+2. **When the toggle is turned on** You will receive an email only when the number of uploaded pages is equal to or exceeds the limit you set (e.g., 3 pages).
 ![notifyon](/images/notifyon.png)
