Changes in title api-reference

--- a/api-reference/bankstmtconverter.mdx
+++ b/api-reference/bankstmtconverter.mdx
@@ -1,5 +1,5 @@
 ---
-title: What Is BankStmtConverter
+title: What is bankstmtconverter
 description: Get an overview of BankStmtConverter — a powerful tool to convert bank statements into editable formats quickly and accurately.
 ---
 
