--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction to BankStmtConverter API
+title: Introduction to bankstmtconverter API
 ---
 
 **Getting start with BankStmtConverter API**
