Changes in sentence on what is bankstmt mdx file

--- a/what-is-bankstmtconverter.mdx
+++ b/what-is-bankstmtconverter.mdx
@@ -15,10 +15,10 @@ Managing bank statements can be time-consuming and error-prone when done manuall
 ### 🎯 Key Benefits
 
 - ✅ Supports multiple file formats: Excel, CSV, HTML, XML, etc.
-- ✅ AI-based table detection for accurate extraction
-- ✅ Fast processing with GPU acceleration
-- ✅ Secure handling of your sensitive financial data
-- ✅ Download results in Excel, CSV, or Google Sheets
+- ✅ AI-based table detection for accurate extraction.
+- ✅ Fast processing with GPU acceleration.
+- ✅ Secure handling of your sensitive financial data.
+- ✅ Download results in Excel, CSV, or Google Sheets.
 
 ### 📊 Use Cases
 
