Add description on what is bankstmt mdx file.

--- a/what-is-bankstmtconverter.mdx
+++ b/what-is-bankstmtconverter.mdx
@@ -1,6 +1,6 @@
 ---
 title: "What Is Bankstmtconverter"
-description: "This section serves as an introduction to the BankStmtConverter documentation."
+description: "Revolutionize Your Financial Data Processing — Instantly Convert Bank Statements from PDF to Excel, CSV or Google Sheets"
 ---
 
 
