--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -65,7 +65,6 @@ POST /bankstmtconversion/sync
 | Code | Description                  |
 |------|------------------------------|
 | 200  | Conversion successful.       |
-| 201  | Conversion request accepted. |
 
 #### Error Codes
 
@@ -74,6 +73,7 @@ POST /bankstmtconversion/sync
 | 400  | Bad Request - Invalid input data. |
 | 404  | Not found - file is missing.      |
 | 401  | Unauthorized - Invalid API key.   |
+| 422  | Unprocessable Entity - Field required or missing data.|
 | 402  | Payment Required - Plan expired.  |
 | 500  | Internal Server Error.            |
 
@@ -138,10 +138,10 @@ POST /bankstmtconversion/async
 
 #### Success Codes
 
-| Code | Description                       |
+| Code | Description                        |
 |------|------------------------------------|
 | 200  | Conversion successful.             |
-| 201  | Conversion request accepted.       |
+
 
 #### Error Codes
 
@@ -150,6 +150,7 @@ POST /bankstmtconversion/async
 | 400  | Bad Request - Invalid input data.  |
 | 404  | Not found - file is missing.       |
 | 401  | Unauthorized - Invalid API key.    |
+| 422  | Unprocessable Entity - Field required or missing data.|
 | 402  | Payment Required - Plan expired.   |
 | 500  | Internal Server Error.             |
 
