Change result screenshot on Googlesheet mdx file.

--- a/integration/google-sheets.mdx
+++ b/integration/google-sheets.mdx
@@ -36,7 +36,7 @@ Once the inbox and auto-forwarding rules are set, you can pull your parsed data 
    select a file name to generate a formula
 2. **Create or Open a Google Sheet**
 
-- Go to [Google Sheets](https://sheets.google.com).  
+- Go to [Google Sheets](https://sheets.google.com)
 
 - Open an existing spreadsheet or create a new one.
 
