--- a/faq.mdx
+++ b/faq.mdx
@@ -3,7 +3,7 @@ id: faqs
 title: FAQs
 ---
 
-## Frequently Asked Questions (FAQ)
+## Frequently Asked Questions (FAQs)
 
 Here are answers to some common questions about using BankStmtConverter.
 
